--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 04:29:00 PM</p>
+    <p class="lastupdate">09/05/2020 04:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">108.1&#176;F</td>
+        <td class="data">107.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">108.1&#176;F</td>
+        <td class="data">107.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">108.1&#176;F</td>
+        <td class="data">107.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.4&#176;F</td>
+        <td class="data">46.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.844 inHg (-0.065)</td>
+        <td class="data">29.841 inHg (-0.066)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph SSW (202&#176;)</td>
+        <td class="data">8 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.7&#176;F</td>
+        <td class="data">86.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:30:02 AM">
             29.969</span><br/>
-          <span title="04:23:02 PM">
-            29.843</span>
+          <span title="04:29:02 PM">
+            29.841</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:22:02 PM">
-            86.7</span><br/>
+          <span title="04:32:02 PM">
+            86.9</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 1 hour, 42 minutes</td>
+      <td class="data">4 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 1 hour, 42 minutes</td>
+      <td class="data">4 days, 1 hour, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
