--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 04:49:00 PM</p>
+    <p class="lastupdate">09/05/2020 04:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">107.6&#176;F</td>
+        <td class="data">107.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">107.6&#176;F</td>
+        <td class="data">107.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">107.6&#176;F</td>
+        <td class="data">107.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.0&#176;F</td>
+        <td class="data">45.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.844 inHg (-0.057)</td>
+        <td class="data">29.844 inHg (-0.053)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph SSW (202&#176;)</td>
+        <td class="data">6 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.3&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">35%</td>
       </tr>
     </tbody>
   </table>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          355
+          353
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:44:02 PM">
-            87.3</span><br/>
+          <span title="04:52:02 PM">
+            87.5</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="05:33:01 AM">
             44</span><br/>
-          <span title="04:35:02 PM">
-            36</span>
+          <span title="04:50:02 PM">
+            35</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:10:02 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 2 hours, 2 minutes</td>
+      <td class="data">4 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 2 hours, 2 minutes</td>
+      <td class="data">4 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
