--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 04:59:00 PM</p>
+    <p class="lastupdate">09/05/2020 05:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -153,18 +153,18 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">56.1<br/>
             <span class="timestamp">10:28:34 AM</span><br/>
-            43.4<br/>
-            <span class="timestamp">03:07:18 PM</span>
+            41.6<br/>
+            <span class="timestamp">05:02:30 PM</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">01:24:38 PM (Wednesday)</span><br/>
-            42.2<br/>
-            <span class="timestamp">05:56:40 AM (Sunday)</span>
+            41.6<br/>
+            <span class="timestamp">05:02:30 PM (Saturday)</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">09/02/2020 01:24:38 PM</span><br/>
-            43.4<br/>
-            <span class="timestamp">09/05/2020 03:07:18 PM</span>
+            41.6<br/>
+            <span class="timestamp">09/05/2020 05:02:30 PM</span>
           </td>
           <td class="data new_row">70.2<br/>
             <span class="timestamp">08/14/2020 10:10:13 AM</span><br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            352
+            347
           </td>
           <td class="data new_row">
             0<br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            87.5<br/>
-            <span class="timestamp">04:52:02 PM</span><br/>
+            87.7<br/>
+            <span class="timestamp">05:03:02 PM</span><br/>
             74.1<br/>
             <span class="timestamp">06:33:01 AM</span>
           </td>
